--- a/style.css
+++ b/style.css
@@ -251,9 +251,10 @@ body {
 }
 
 section {
-    padding: 10px 0;
-    margin: 0;
-    border-bottom: 1px solid #ccc;
+    margin: 10px;
+    padding: 10px;
+    border-bottom: 2px solid #a7a7a7;
+    border-width: 3px;
 }
 
 section p {
@@ -266,6 +267,11 @@ section p {
     font-size: 40px;
     margin: 0;
     text-align: center;
+    color: #333;
+}
+
+h2 {
+    font-size: 30px;
     color: #333;
 }
 
@@ -292,7 +298,7 @@ section p {
 
 
 #education {
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .education-item {
@@ -366,7 +372,7 @@ section p {
 
 
 #research-interests {
-    margin: 20px 0; /* Margin for the section */
+    padding: 10px 0; /* Margin for the section */
 }
 
 #research-interests ul {
@@ -395,7 +401,7 @@ section p {
 
 /* Research Experience Section Style */
 #research {
-    padding: 20px 0; /* Padding for the section */
+    padding: 10px 0; /* Padding for the section */
 }
 
 /* Research Items */
@@ -475,11 +481,11 @@ section p {
 
 /* Projects Section Style */
 #projects {
-    padding: 20px 0; /* Overall padding for the section */
+    padding: 10px 0; /* Overall padding for the section */
 }
 
 .project-item {
-    margin-bottom: 30px; /* Space between project items */
+    margin-bottom: 50px; /* Space between project items */
     border-left: 3px solid #898888; /* Border on the left */
     padding-left: 15px; /* Padding on the left */
 }
